--- a/data/manifest.json
+++ b/data/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#6750A4",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔤</text></svg>",
+      "src": "../assets/icon.png",
       "sizes": "any",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ]
 }
